Adding better credential saving, separating base page from parse page, adding ability to set search prefix instead of defaulting to "puzzle/"

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,15 @@
 <body>
 <a th:href="${authUrl}">Authorize the Url</a>
 <br/><br/>
-Base URL: <input id="basePage" type="text" value="http://web.mit.edu/puzzle/www/2015/"/>
+Domain: <input id="basePage" type="text" value="http://web.mit.edu/puzzle/www/2015/"/>
 <input type="button" id="setUrl" value="Set Base URL"/>
+<br/><br/>
+Parse Page: <input id="parsePage" type="text" value=""/>
+<input type="button" id="setParsePage" value="Set Parse Page"/>
+<br/><br/>
+Prefix: <input id="prefix" type="text" value=""/>
+<input type="button" id="setPrefix" value="Set Prefix"/>
+
 <script src="/js/main.js"></script>
 </body>
 </html>
