New field that allows us to chop repeating string from the end of a title, eg "MIT Mystery Hunt 2015"

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,9 @@ Parse Page: <input id="parsePage" type="text" th:value="${parsePage}"/>
 <br/><br/>
 Prefix: <input id="prefix" type="text" th:value="${prefix}"/>
 <input type="button" id="setPrefix" value="Set Prefix"/>
+<br/><br/>
+Title Cut String: <input id="titleCut" type="text" th:value="${titleCut}"/>
+<input type="button" id="setTitleCut" value="Set Title Cut"/>
 
 <script src="/js/main.js"></script>
 </body>
