Support for adding a cookie name/value for login testing

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,12 @@ Prefix: <input id="prefix" type="text" th:value="${prefix}"/>
 <br/><br/>
 Title Cut String: <input id="titleCut" type="text" th:value="${titleCut}"/>
 <input type="button" id="setTitleCut" value="Set Title Cut"/>
+<br/><br/>
+Login Cookie Name: <input id="cookieName" type="text" th:value="${cookieName}"/>
+<input type="button" id="setCookieName" value="Set Title Cut"/>
+<br/><br/>
+Login Cookie Value: <input id="cookieValue" type="text" th:value="${cookieValue}"/>
+<input type="button" id="setCookieValue" value="Set Title Cut"/>
 
 <script src="/js/main.js"></script>
 </body>
