Trying a second worksheet to add rows

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,10 +19,10 @@ Title Cut String: <input id="titleCut" type="text" th:value="${titleCut}"/>
 <input type="button" id="setTitleCut" value="Set Title Cut"/>
 <br/><br/>
 Login Cookie Name: <input id="cookieName" type="text" th:value="${cookieName}"/>
-<input type="button" id="setCookieName" value="Set Title Cut"/>
+<input type="button" id="setCookieName" value="Set Cookie Name"/>
 <br/><br/>
 Login Cookie Value: <input id="cookieValue" type="text" th:value="${cookieValue}"/>
-<input type="button" id="setCookieValue" value="Set Title Cut"/>
+<input type="button" id="setCookieValue" value="Set Cookie Value"/>
 
 <script src="/js/main.js"></script>
 </body>
