--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@ Create an Advantage Difficulty: <input id="advantageDifficulty" type="text" />
         <b>Failures: </b> <span id="failSpan"></span>
     </div>
     <div id="ties">
-        <b>Failures: </b> <span id="tieSpan"></span>
+        <b>Ties: </b> <span id="tieSpan"></span>
     </div>
     <div id="success">
         <b>Successes: </b> <span id="successSpan"></span>
