Some boost info

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,6 +45,7 @@ Create an Advantage Difficulty: <input id="advantageDifficulty" type="text" />
                 <th>Primary Roll</th>
                 <th>Successful Helpers</th>
                 <th>Failed Helpers</th>
+                <th>Booster Helper # (0 = No Boost!)</th>
             </tr>
         </thead>
         <tbody id="resultTableBody">
