--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-    <script src="/js/jquery.fs.zoetrope.min.js"></script>
-    <script src="/js/toe.min.js"></script>
-    <script src="/js/jquery.mousewheel.min.js"></script>
-    <script src="/js/imgViewer.min.js"></script>
-    <script src="/js/imgNotes.min.js"></script>
+    <script type="text/javascript" src="/js/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/js/jquery/jquery-ui.js"></script>
+    <script type="text/javascript" src="/js/jquery.fs.zoetrope.min.js"></script>
+    <script type="text/javascript" src="/js/toe.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.mousewheel.min.js"></script>
+    <script type="text/javascript" src="/js/imgViewer.min.js"></script>
+    <script type="text/javascript" src="/js/imgNotes.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
 </head>
 <body>
