--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <style type="text/css" media="all">@import "/css/marker.css";</style>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" media="screen">
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" media="screen" />
     <script type="text/javascript" src="/js/jquery/jquery.js"></script>
     <script type="text/javascript" src="/js/jquery/jquery-ui.js"></script>
     <script type="text/javascript" src="/js/jquery.fs.zoetrope.min.js"></script>
