--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Adventure Guild Map</title>
     <style type="text/css" media="all">@import "/css/marker.css";</style>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" media="screen" />
     <script type="text/javascript" src="/js/jquery/jquery.js"></script>
