Adding map page style

--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -3,7 +3,7 @@
 <head>
     <title>Adventure Guild Map</title>
     <style type="text/css" media="all">@import "/css/marker.css";</style>
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" media="screen" />
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" media="screen"/>
     <script type="text/javascript" src="/js/jquery/jquery.js"></script>
     <script type="text/javascript" src="/js/jquery/jquery-ui.js"></script>
     <script type="text/javascript" src="/js/jquery.fs.zoetrope.min.js"></script>
@@ -14,10 +14,12 @@
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
 </head>
 <body>
-<h2>Adventure Guild Map!</h2>
+<div class="page">
+    <h2>Adventure Guild Map!</h2>
 
-<div id="imgdiv" style="text-align: center">
-    <img id="image" src="/img/guild-map.png" style="border: 5px solid #ccc; padding:20px;" width="80%"/>
+    <div id="imgdiv" style="text-align: center">
+        <img id="image" src="/img/guild-map.png" style="border: 5px solid #ccc; padding:20px;" width="80%"/>
+    </div>
 </div>
 
 <script src="/js/map.js"></script>
