Style some more

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,26 +8,11 @@
         <a href="/">
             <li>Home</li>
         </a>
-        <a href="/login" th:unless="${loggedIn}">
-            <li>Login</li>
+        <a href="/map">
+            <li>Map</li>
         </a>
-        <a href="/register" th:unless="${loggedIn}">
-            <li>Register</li>
-        </a>
-        <a href="/user" th:if="${loggedIn}">
-            <li>Profile</li>
-        </a>
-        <a href="/new" th:if="${loggedIn}">
-            <li>New Character</li>
-        </a>
-        <a href="/newLocation" th:if="${loggedIn}">
-            <li>New Location</li>
-        </a>
-        <a href="/newSetting" th:if="${loggedIn}">
-            <li>New Setting</li>
-        </a>
-        <a href="/logout" th:if="${loggedIn}">
-            <li>Logout</li>
+        <a href="/obstacle" >
+            <li>Obstacle Tester</li>
         </a>
     </ul>
 </header>
