--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -15,11 +15,15 @@
 </head>
 <body>
 <div class="page">
+    <img id="leftTape" src="/images/tape-left.png"/>
+    <img id="rightTape" src="/images/tape-right.png"/>
+    <header th:replace="fragments/header :: header"></header>
     <h2>Adventure Guild Map!</h2>
 
     <div id="imgdiv" style="text-align: center">
         <img id="image" src="/img/guild-map.png" style="border: 5px solid #ccc; padding:20px;" width="80%"/>
     </div>
+    <img id="pen" src="/images/penspatter.png"/>
 </div>
 
 <script src="/js/map.js"></script>
