Making all bout 'dem characters

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,6 +8,12 @@
         <a href="/">
             <li>Home</li>
         </a>
+        <a href="/roster">
+            <li>Roster</li>
+        </a>
+        <a href="/npc">
+            <li>Persons of Interest</li>
+        </a>
         <a href="/map">
             <li>Map</li>
         </a>
