--- a/src/main/resources/templates/obstacle.html
+++ b/src/main/resources/templates/obstacle.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
 </head>
 <body>
-<div class="page">
+<div class="page obstaclePage">
     <img id="leftTape" src="/images/tape-left.png"/>
     <img id="rightTape" src="/images/tape-right.png"/>
     <header th:replace="fragments/header :: header"></header>
