--- a/src/main/resources/templates/roster.html
+++ b/src/main/resources/templates/roster.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Adventure Guild</title>
+    <title>FATE Obstacle Testing</title>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
 </head>
@@ -10,11 +10,17 @@
     <img id="leftTape" src="/images/tape-left.png"/>
     <img id="rightTape" src="/images/tape-right.png"/>
     <header th:replace="fragments/header :: header"></header>
-    <h1>Adventure Guild</h1>
-    <p>Probably some stuff will go here eventually!</p>
+    <h1>Guild Roster</h1>
 
+    <div class="roster">
+        <ul>
+            <li class="characterCard">
+
+            </li>
+        </ul>
+    </div>
+    <img id="pen" src="/images/penspatter.png"/>
 </div>
-<img id="pen" src="/images/penspatter.png"/>
 <script src="/js/main.js"></script>
 </body>
 </html>
